code/human_written_tests/WebAssembly/processed_control_flow_validation/test_unreachable_13.wast
(assert_invalid
  (module (func $type-unconsumed-poly2
    (unreachable) (i32.const 0) (i32.const 0) (select)
  ))
  "type mismatch"
)